Alignment fixes for browse all page

--- a/vro/static/css/style.css
+++ b/vro/static/css/style.css
@@ -181,10 +181,9 @@ ul a {
 
 #year-range{
     background-color: #ffffff;
+    text-align: center;
 }
 
-.browse-all-year-range {
-    /*width: 50%;*/
-    /*margin-right: 2rem;*/
-    /*margin-left: 2rem;*/
+.btn-dark {
+    color: white !important;
 }
